# scraping_work_schedule

./: .gitignore  README.md  app.py  pyproject.toml  run.cmd  run_app_web.cmd  run_now.py  run_script_cli.py
controler/: controler.py
pluggins/: google_api_connection.py  selenium_schedule_bot.py
static/js/: main.js
templates/: base.html
templates/home/: index.html
